; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_treectl.c_FreeAllTreeData.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_treectl.c_FreeAllTreeData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LB_GETCOUNT = common dso_local global i32 0, align 4
@LB_GETTEXT = common dso_local global i32 0, align 4
@LB_RESETCONTENT = common dso_local global i32 0, align 4
@GWL_XTREEMAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FreeAllTreeData(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @LB_GETCOUNT, align 4
  %8 = call i64 @SendMessage(i32 %6, i32 %7, i64 0, i64 0)
  %9 = sub nsw i64 %8, 1
  store i64 %9, i64* %4, align 8
  br label %10

10:                                               ; preds = %13, %1
  %11 = load i64, i64* %4, align 8
  %12 = icmp sge i64 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %10
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @LB_GETTEXT, align 4
  %16 = load i64, i64* %4, align 8
  %17 = ptrtoint i64* %5 to i64
  %18 = call i64 @SendMessage(i32 %14, i32 %15, i64 %16, i64 %17)
  %19 = load i64, i64* %5, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @LocalFree(i32 %20)
  %22 = load i64, i64* %4, align 8
  %23 = add nsw i64 %22, -1
  store i64 %23, i64* %4, align 8
  br label %10

24:                                               ; preds = %10
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* @LB_RESETCONTENT, align 4
  %27 = call i64 @SendMessage(i32 %25, i32 %26, i64 0, i64 0)
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @GetParent(i32 %28)
  %30 = load i32, i32* @GWL_XTREEMAX, align 4
  %31 = call i32 @SetWindowLongPtr(i32 %29, i32 %30, i32 0)
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @SendMessage(i32, i32, i64, i64) #1

declare dso_local i32 @LocalFree(i32) #1

declare dso_local i32 @SetWindowLongPtr(i32, i32, i32) #1

declare dso_local i32 @GetParent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
